docs/tests/nameres/expressions/invalid/ChannelTypeDoesntExist.src
// Invalid 

let int x = 4;
let chan<ID> idChan = <-x;